# renderbox-snow

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
lib/: GridNode.h  LavaGridCellNode.cpp  LavaGridCellNode.h  LavaGridFaceNode.cpp  LavaGridFaceNode.h  LavaParticleNode.cpp  LavaParticleNode.h  LavaSolver.cpp  LavaSolver.h  Node.h  ParticleNode.h  SnowGridNode.h  SnowParticleNode.h  SnowSolver.cpp  SnowSolver.h  Solver.h  conjugate_residual_solver.h
scripts/: sim-scene0-snowball-explicit-5e-3.sh  sim-scene0-snowball-explicit-5e-4.sh  sim-scene0-snowball-semi-implicit-5e-3.sh  sim-scene0-snowball-semi-implicit-5e-4.sh  sim-scene1-slab-explicit-1e-5.sh  sim-scene1-slab-explicit-5e-3.sh  sim-scene1-slab-explicit-5e-4.sh  sim-scene1-slab-semi-implicit-5e-3.sh  sim-scene1-slab.sh
src/: GridNode.cpp  Node.h  ParticleNode.cpp  ParticleNode.h  SnowSolver.cpp  SnowSolver.h  demo-butterball.cpp  demo-diff-snowball.cpp  demo-lava-snowball.cpp  demo-slab-over-wedge.cpp  demo-snowball.cpp  demo-snowman.cpp  info.cpp  lava-demo-floaty.cpp  lava-demo-snowball.cpp  lava-render-scene2.cpp  lava-sim-gen-snowball.cpp  lava-sim-scene0-gen-snowball.cpp  lava-sim-scene0.cpp  lava-sim-scene2-gen-floaty.cpp  lava-sim-scene2.cpp  lava-viz-scene0.cpp  lava-viz-scene2.cpp  main.cpp  render-scene1.cpp  sim-gen-slab.cpp  sim-gen-snowball.cpp  sim-gen-snowman.cpp  sim-init-snowball.cpp  sim-scene0.cpp  sim-scene1.cpp  viz-diff-scene0.cpp  viz-diff-scene1.cpp  viz-scene0.cpp  viz-scene1.cpp
src/scenes/: scene0.h  scene1.h  scene2.h
src/snow/: slab.h  sphere.h
src/utils/: common.h  renderer.h  sim.h  viz-diff.h  viz-render.h  viz.h
tests/: conjugate_residual_method.cpp  snowlib.cpp
utils/: sim-scene0-snowball.sh
